Atualizado o titulo e botao com label dinamico

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
 
     <button mat-stroked-button
-            (click)="validacao_login()">Entrar</button>
+            (click)="validacao_login()">{{label}}</button>
 
 
   </div>
